# compositor

./: CMakeLists.txt  LICENSE  client.cpp  compositor.cpp  compositor.hpp  protocol-client.h  protocol-server.h  protocol.h  server.cpp  surface.cpp  surface.hpp
clients/: client-shm.cpp
